apps/front/static/css/base.css
html {
    overflow-y: scroll;
}

thead > tr > th {
    font-weight: bold;
}

label.error {
    color: red;
}

label.valid {
    margin-bottom: 0px;
}

label.invisiblevalid {
    display: none !important;
}

body {
    padding-top: 60px;
    padding-bottom: 40px;
}

h1 {
    font-size: 25px;
}

h2 {
    font-size: 22px;
}

h3 {
    font-size: 20px;
}

.table th,
.table td {
    padding: 4px;
    line-height: 15px;
}

.sidebar-nav {
    padding: 9px 0;
}

@media (max-width: 980px) {
    /* Enable use of floated navbar text */
    .navbar-text.pull-right {
        float: none;
        padding-left: 5px;
        padding-right: 5px;
    }
}

.hero-unit {
    padding-top: 6px;
    padding-bottom: 12px;
    padding-left: 18px
}

.hero-unit h1 {
    margin-bottom: 0;
    font-size: 25px;
}

.icon-phone {
    background-position: -96px -168px;
}

[class^="logo-"],
[class*=" logo-"] {
    display: inline-block;
    width: 32px;
    height: 21px;
    margin-top: 1px;
    *margin-right: .3em;
    line-height: 21px;
    vertical-align: text-top;
    background-image: url("../img/swanicon.png");
    background-position: 32px 21px;
    background-repeat: no-repeat;
}

.logo-swanicon {
    background-position: 0 0;
}

div#line {
    border-right-width: 1px;
    border-right-style: solid;
    border-color: black;
    padding-right: 1em;
    text-align: justify;
    word-break: break-all;
}

table.sortable th {
    background: url(../img/sortable.gif) no-repeat center right;
    cursor: pointer;
    border-right: 1px solid #ddd;
}

table.sortable th.tablesorter-headerAsc {
    background: #fdfdfd url(../img/sortable-asc.gif) no-repeat center right;
}

table.sortable th.tablesorter-headerDesc {
    background: #fdfdfd url(../img/sortable-desc.gif) no-repeat center right;
}

table.sortable th.sorter-false {
    background: inherit;
}

.slct2-autocomplete {
    width: 220px;
}

.sessions-dropdown {
    width: 300px;
}

.ajax-paged .paging-buttons {
    margin: 10px 0 20px 0;
}

pre.raw-xml {
    font-size: 10px;
}

.displ-none {
    display: none;
}

.table.statsTable td.title {
    width: 290px;
}

.table .siwd-new-icon {
    width: 20px;
}

